modified module pattern

--- a/app.css
+++ b/app.css
@@ -1,9 +1,61 @@
-.key{
+/*.key{
 	display:inline-block;
 	width:20px;
 	height:100px;
 	outline-style:solid;
 }
+
+
+*/
+
+li {
+  list-style:none;
+  float:left;
+  display:inline;
+  width:40px;
+  position:relative;
+}
+
+.white-key{
+  display:block;
+  height:220px;
+  background:#fff;
+  border:1px solid #ddd;
+  border-radius:0 0 3px 3px;
+}
+
+
+
+/* Black keys */
+.black-key {
+	display:inline-block;
+  position:absolute;
+  top:0px;
+  left:-12px;
+  width:25px;
+  height:125px;
+  background:#000;
+  z-index:1;
+
+}
+
+.selected{
+  background-color:blue;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
