--- a/app.css
+++ b/app.css
@@ -7,6 +7,11 @@
 
 
 */
+body{
+  background-color:purple;
+ 
+}
+
 
 li {
   list-style:none;
@@ -44,7 +49,10 @@ li {
 }
 
 
+h1{
 
+  color:rgb(228, 208, 230);
+}
 
 
 
